--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Project to set up restaurant page; original specifications can be found at https://www.theodinproject.com/courses/javascript/lessons/restaurant-page ",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "build": "webpack --mode=development",
+    "watch": "webpack --mode=development --watch",
+    "stylelint": "npx stylelint **/*.{css,scss}",
+    "stylelint-f": "npx stylelint **/*.{css,scss} --fix",
+    "eslint": "eslint .",
+    "eslint-f": "eslint . --fix"
   },
   "keywords": [
     "webpack",
@@ -14,12 +18,21 @@
   ],
   "author": "marylene",
   "devDependencies": {
+    "babel-eslint": "10.1.x",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.3.0",
+    "eslint": "6.8.x",
+    "eslint-config-airbnb-base": "14.1.x",
+    "eslint-plugin-import": "2.20.x",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
+    "normalize.css": "^8.0.1",
     "style-loader": "^1.3.0",
+    "stylelint": "13.3.x",
+    "stylelint-config-standard": "20.0.x",
+    "stylelint-csstree-validator": "^1.8.0",
+    "stylelint-scss": "3.17.x",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12"
   }
