--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
     "ignorePatterns": [
       "dist/",
       "build/",
-      "node_modules"
+      "node_modules",
+      "public/"
     ]
   }
