--- a/package.json
+++ b/package.json
@@ -25,20 +25,20 @@
   },
   "homepage": "https://github.com/bluette1/restaurant-page#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "css-loader": "^4.3.0",
+    "babel-loader": "^8.1.0",
+    "normalize.css": "^8.0.1",
+    "style-loader": "^1.3.0",
+    "file-loader": "^6.1.0"
   },
   "devDependencies": {
     "babel-eslint": "10.1.x",
-    "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^4.3.0",
     "eslint": "6.8.x",
     "eslint-config-airbnb-base": "14.1.x",
     "eslint-plugin-import": "2.20.x",
-    "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
-    "normalize.css": "^8.0.1",
-    "style-loader": "^1.3.0",
     "stylelint": "13.3.x",
     "stylelint-config-standard": "20.0.x",
     "stylelint-csstree-validator": "^1.8.0",
